# skydeckai-code

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/aidd/: __init__.py  cli.py  server.py
src/aidd/tools/: __init__.py  base.py  code_analysis.py  code_execution.py  code_tools.py  directory_tools.py  file_tools.py  get_active_apps_tool.py  get_available_windows_tool.py  git_tools.py  image_tools.py  lint_tools.py  other_tools.py  path_tools.py  screenshot_tool.py  state.py  system_tools.py  todo_store.py  todo_tools.py  web_tools.py
