[project]
name = "mcp-server-aidd"
version = "0.1.16"
description = "This MCP server provides a set of tools that support AI-driven Development workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "SkyDeck.ai", email = "support@skydeck.ai"}]
license = {text = "MIT"}
keywords = ["mcp", "development", "ai", "aidd", "code-analysis"]

dependencies = [
    "mcp>=1.4.1",
    "tree-sitter>=0.23.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-kotlin>=1.0.1",
    "tree-sitter-php>=0.23.11",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.23.2",
    "tree-sitter-typescript>=0.23.2",
    "GitPython>=3.1.44",
    "psutil>=6.1.1",
    "mss>=10.0.0",
    "pygetwindow>=0.0.9",
    "pyobjc-framework-Quartz>=9.0.0",
    "Pillow>=11.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aidd"]

[tool.hatch.envs.default]
dependencies = [
    "build",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 250
target-version = "py311"

# Enable rules
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]

[project.urls]
Homepage = "https://github.com/skydeckai/mcp-server-aidd"
Repository = "https://github.com/skydeckai/mcp-server-aidd"
Documentation = "https://github.com/skydeckai/mcp-server-aidd/blob/main/README.md"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-aidd = "aidd:main"
aidd = "aidd:main"
aidd-cli = "aidd.cli:main"

