[project]
name = "skydeckai-code"
version = "0.1.23"
description = "This MCP server provides a set of tools that support AI-driven Development workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "SkyDeck.ai", email = "support@skydeck.ai"}]
license = {text = "Apache 2.0"}
keywords = ["mcp", "development", "ai", "aidd", "code-analysis", "code"]

dependencies = [
    "mcp>=1.6.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-php>=0.23.11",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust==0.23.2",
    "tree-sitter-typescript>=0.23.2",
    "GitPython>=3.1.44",
    "psutil>=7.0.0",
    "mss>=10.0.0",
    "pygetwindow>=0.0.9",
    "pyobjc-framework-Quartz>=11.0",
    "pillow>=11.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aidd"]

[tool.hatch.envs.default]
dependencies = [
    "build",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 250
target-version = "py311"

# Enable rules
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]

[project.urls]
Homepage = "https://github.com/skydeckai/skydeckai-code"
Repository = "https://github.com/skydeckai/skydeckai-code"
Documentation = "https://github.com/skydeckai/skydeckai-code/blob/main/README.md"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
skydeckai-code = "aidd:main"
skydeckai-code-cli = "aidd.cli:main"

